--- a/app/src/main/res/layout/team.xml
+++ b/app/src/main/res/layout/team.xml
@@ -3,4 +3,19 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New Button"
+        android:id="@+id/teamBtn"
+        android:layout_gravity="center_horizontal" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:id="@+id/testText"
+        android:layout_gravity="center_horizontal"
+        android:singleLine="false"
+        android:text="ONE TWO" />
 </LinearLayout>
