--- a/app/src/main/res/layout/registration.xml
+++ b/app/src/main/res/layout/registration.xml
@@ -8,7 +8,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/btn_create"
-        android:id="@+id/button"
+        android:id="@+id/createTeamBtn"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="33dp"
         android:layout_below="@+id/com"
@@ -24,7 +24,7 @@
         android:ems="10"
         android:id="@+id/fio"
         android:layout_marginBottom="90dp"
-        android:layout_above="@+id/button"
+        android:layout_above="@+id/createTeamBtn"
         android:layout_centerHorizontal="true"
         android:tag="fio" />
 
