--- a/app/src/main/res/layout/loader.xml
+++ b/app/src/main/res/layout/loader.xml
@@ -5,12 +5,13 @@
     android:background="@drawable/loader"
     android:onClick="LoaderClose">
 
-    <TextView
+    <ProgressBar
+        style="?android:attr/progressBarStyleLarge"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="@string/loader"
-        android:id="@+id/textView20"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
+        android:id="@+id/progressBar"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="38dp"
+        android:layout_centerVertical="true" />
+
 </RelativeLayout>
