--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -130,7 +130,7 @@
             android:layout_alignParentBottom="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:onClick="menu_click"
+            android:onClick="menuClick"
             android:tag="menu"/>
 
     </RelativeLayout>
