--- a/app/src/main/res/layout/team.xml
+++ b/app/src/main/res/layout/team.xml
@@ -1,21 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="New Button"
-        android:id="@+id/teamBtn"
-        android:layout_gravity="center_horizontal" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:id="@+id/testText"
-        android:layout_gravity="center_horizontal"
-        android:singleLine="false"
-        android:text="ONE TWO" />
-</LinearLayout>
+        android:text="Team Name"
+        android:id="@+id/team_name"
+        android:layout_marginTop="55dp"
+        android:layout_centerHorizontal="true" />
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="10dp"
+        android:layout_below="@+id/team_name">
+
+        <!-- КОНТЕЙНЕР ИГРОКОВ -->
+        <ListView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/players_cont">
+        </ListView>
+
+    </ScrollView>
+
+</RelativeLayout>
