--- a/app/src/main/res/layout/dialog.xml
+++ b/app/src/main/res/layout/dialog.xml
@@ -8,8 +8,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Союзы появятся после получения 20 уровня в игре!"
-        android:id="@+id/textView"
+        android:text=""
+        android:id="@+id/dialog_text"
         android:textAlignment="center"
         android:layout_gravity="center_horizontal" />
 
