--- a/app/src/main/res/layout/help.xml
+++ b/app/src/main/res/layout/help.xml
@@ -1,12 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingTop="50dp"
+    android:paddingBottom="70dp">
+
+    <ImageView
+        android:id="@+id/mini_menu"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:src="@drawable/menu_help"
+        android:layout_alignBottom="@+id/help_h1"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"/>
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="New Text"
-        android:id="@+id/textView18"
-        android:layout_gravity="center_horizontal" />
-</LinearLayout>
+        style="@style/WrapContent"
+        android:text="@string/menu_14"
+        android:textSize="22dp"
+        android:id="@+id/help_h1"
+        android:layout_toRightOf="@+id/mini_menu"
+        android:textColor="#77f2f2f2"/>
+
+    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:layout_below="@+id/help_h1"
+       android:layout_marginTop="10dp"
+       android:layout_marginLeft="10dp"
+       android:layout_marginStart="10dp"
+       android:layout_marginRight="10dp"
+       android:layout_marginEnd="10dp"
+       android:scrollbarAlwaysDrawVerticalTrack="true">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="@string/loader"
+                android:id="@+id/help_text"
+                android:textSize="12dp"/>
+
+    </ScrollView>
+
+</RelativeLayout>
