--- a/app/src/main/res/layout/loader.xml
+++ b/app/src/main/res/layout/loader.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/loader_layout"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/loader"
@@ -12,6 +13,7 @@
         android:id="@+id/progressBar"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="38dp"
-        android:layout_centerVertical="true" />
+        android:layout_centerVertical="true"
+        android:indeterminate="false" />
 
 </RelativeLayout>
