--- a/app/src/main/res/layout/rating.xml
+++ b/app/src/main/res/layout/rating.xml
@@ -1,6 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
 
-</LinearLayout>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingTop="50dp"
+    android:paddingBottom="70dp">
+
+    <ImageView
+        android:id="@+id/mini_menu"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:src="@drawable/menu_rating"
+        android:layout_alignBottom="@+id/rating_h1"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"/>
+
+    <TextView
+        style="@style/WrapContent"
+        android:text="@string/menu_13"
+        android:textSize="22dp"
+        android:id="@+id/rating_h1"
+        android:layout_toRightOf="@+id/mini_menu"
+        android:textColor="#fff28800"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="@string/loader"
+        android:id="@+id/rating_text"
+        android:textSize="12dp"
+        android:paddingRight="10dp"
+        android:paddingLeft="10dp"
+        android:layout_below="@+id/rating_h1"/>
+
+</RelativeLayout>
