--- a/app/src/main/res/layout/registration.xml
+++ b/app/src/main/res/layout/registration.xml
@@ -13,7 +13,7 @@
         android:layout_marginTop="33dp"
         android:layout_below="@+id/com"
         android:layout_centerHorizontal="true"
-        android:onClick="reg_complete"/>
+        android:onClick="regComplete"/>
 
     <EditText
         style="@style/InputText"
