--- a/app/src/main/res/layout/rules.xml
+++ b/app/src/main/res/layout/rules.xml
@@ -1,7 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:weightSum="1">
 
-</LinearLayout>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingTop="50dp"
+    android:paddingBottom="70dp">
+
+    <ImageView
+        android:id="@+id/mini_menu"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:src="@drawable/menu_rules"
+        android:layout_alignBottom="@+id/rules_h1"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"/>
+
+    <TextView
+        style="@style/WrapContent"
+        android:text="@string/menu_15"
+        android:textSize="22dp"
+        android:id="@+id/rules_h1"
+        android:layout_toRightOf="@+id/mini_menu"
+        android:textColor="#77f2f2f2"/>
+
+    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/rules_h1"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginEnd="10dp"
+        android:scrollbarAlwaysDrawVerticalTrack="true">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="@string/loader"
+            android:id="@+id/rules_text"
+            android:textSize="12dp"/>
+
+    </ScrollView>
+
+</RelativeLayout>
