--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -27,7 +27,7 @@
     <style name="MenuItem" parent="@android:style/TextAppearance.Medium">
         <item name="android:layout_width">100dp</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:onClick">menu_click</item>
+        <item name="android:onClick">menuClick</item>
         <item name="android:clickable">true</item>
     </style>
 
