--- a/app/src/main/res/layout/one_player.xml
+++ b/app/src/main/res/layout/one_player.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     android:padding="2dp">
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <RelativeLayout
         android:id="@+id/player_block"
         android:layout_width="match_parent"
         android:layout_height="45dp"
@@ -14,35 +14,35 @@
             android:id="@+id/op_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="14dp"
-            android:text="Андрей Красильников"
+            android:textSize="14sp"
+            android:text=""
             android:shadowDx="1"
             android:shadowDy="1"
             android:shadowColor="#000000"
             android:shadowRadius="1"
             android:textColor="#ffffff"
             android:layout_marginLeft="10dp"
+            android:layout_marginStart="10dp"
             android:layout_centerVertical="true" />
 
-            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="50dp"
                 android:layout_height="45dp"
                 android:layout_margin="5dp"
                 android:background="@drawable/rating_gradient"
                 android:layout_alignParentRight="true"
-                android:textAlignment="center">
+                android:layout_alignParentEnd="true">
                 <TextView
                     android:id="@+id/op_rate"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="20dp"
-                    android:text="90"
+                    android:textSize="20sp"
+                    android:text=""
                     android:textColor="#ff000000"
                     android:padding="5dp"
-                    android:autoText="false"
                     android:layout_alignParentTop="true"
                     android:layout_centerHorizontal="true" />
-            </RelativeLayout>
+        </RelativeLayout>
 
     </RelativeLayout>
 
