--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -72,5 +72,18 @@
         <item name="android:layout_margin">5dp</item>
     </style>
 
+    <style name="Btn" parent="@android:style/TextAppearance.Medium">
+        <item name="android:textSize">14dp</item>
+        <item name="android:background">@drawable/button_gradient</item>
+        <item name="android:layout_margin">5dp</item>
+        <item name="android:paddingLeft">10dp</item>
+        <item name="android:paddingRight">10dp</item>
+    </style>
+
+    <style name="OneColor" parent="@android:style/TextAppearance.Medium">
+        <item name="android:layout_width">50dp</item>
+        <item name="android:layout_height">50dp</item>
+    </style>
+
 
 </resources>
