--- a/app/src/main/res/animator/slide_right_fragment.xml
+++ b/app/src/main/res/animator/slide_right_fragment.xml
@@ -10,4 +10,27 @@
         android:valueFrom="0"
         android:duration="250"/>
 
+    <objectAnimator xmlns:android="http://schemas.android.com/apk/res/android"
+        android:interpolator="@android:anim/accelerate_decelerate_interpolator"
+        android:propertyName="ScaleX"
+        android:valueType="floatType"
+        android:valueTo="0.5"
+        android:valueFrom="1.0"
+        android:duration="250"/>
+
+    <objectAnimator xmlns:android="http://schemas.android.com/apk/res/android"
+        android:interpolator="@android:anim/accelerate_decelerate_interpolator"
+        android:propertyName="ScaleY"
+        android:valueType="floatType"
+        android:valueTo="0.5"
+        android:valueFrom="1.0"
+        android:duration="250"/>
+
+    <objectAnimator xmlns:android="http://schemas.android.com/apk/res/android"
+        android:interpolator="@android:anim/accelerate_decelerate_interpolator"
+        android:propertyName="alpha"
+        android:valueType="floatType"
+        android:valueTo="0"
+        android:valueFrom="1"
+        android:duration="200"/>
 </set>
