--- a/app/src/main/res/layout/one_player.xml
+++ b/app/src/main/res/layout/one_player.xml
@@ -44,6 +44,13 @@
                     android:layout_centerHorizontal="true" />
         </RelativeLayout>
 
+        <TextView
+            android:id="@+id/op_id"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:visibility="gone" />
+
     </RelativeLayout>
 
 </RelativeLayout>
