--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -43,6 +43,10 @@
         <item name="android:layout_centerHorizontal">true</item>
         <item name="android:textColor">#ffffff</item>
         <item name="android:textSize">14dp</item>
+        <item name="android:shadowDx">0</item>
+        <item name="android:shadowDy">2</item>
+        <item name="android:shadowRadius">2</item>
+        <item name="android:shadowColor">#000000</item>
     </style>
 
     <style name="DataLine" parent="@android:style/TextAppearance.Medium">
