--- a/app/src/main/res/layout/loader.xml
+++ b/app/src/main/res/layout/loader.xml
@@ -3,8 +3,7 @@
     android:id="@+id/loader_layout"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/loader"
-    android:onClick="LoaderClose">
+    android:background="@drawable/loader">
 
     <ProgressBar
         style="?android:attr/progressBarStyleLarge"
