--- a/app/src/main/res/animator/slide_left_menu.xml
+++ b/app/src/main/res/animator/slide_left_menu.xml
@@ -1,10 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <set xmlns:android="http://schemas.android.com/apk/res/android">
+
     <objectAnimator xmlns:android="http://schemas.android.com/apk/res/android"
         android:interpolator="@android:anim/accelerate_decelerate_interpolator"
         android:propertyName="x"
         android:valueType="floatType"
         android:valueTo="-1280"
         android:valueFrom="0"
-        android:duration="250"/>
+        android:duration="400"/>
+
+    <objectAnimator xmlns:android="http://schemas.android.com/apk/res/android"
+        android:interpolator="@android:anim/accelerate_decelerate_interpolator"
+        android:propertyName="ScaleX"
+        android:valueType="floatType"
+        android:valueTo="0.25"
+        android:valueFrom="1.0"
+        android:duration="400"/>
+
+    <objectAnimator xmlns:android="http://schemas.android.com/apk/res/android"
+        android:interpolator="@android:anim/accelerate_decelerate_interpolator"
+        android:propertyName="ScaleY"
+        android:valueType="floatType"
+        android:valueTo="0.25"
+        android:valueFrom="1.0"
+        android:duration="400"/>
+
+    <objectAnimator xmlns:android="http://schemas.android.com/apk/res/android"
+        android:interpolator="@android:anim/accelerate_decelerate_interpolator"
+        android:propertyName="alpha"
+        android:valueType="floatType"
+        android:valueTo="0"
+        android:valueFrom="1"
+        android:duration="300"/>
+
 </set>
