--- a/app/src/main/res/animator/slide_right_menu.xml
+++ b/app/src/main/res/animator/slide_right_menu.xml
@@ -8,6 +8,30 @@
         android:valueType="floatType"
         android:valueTo="0"
         android:valueFrom="1280"
-        android:duration="250"/>
+        android:duration="400"/>
+
+    <objectAnimator xmlns:android="http://schemas.android.com/apk/res/android"
+        android:interpolator="@android:anim/accelerate_decelerate_interpolator"
+        android:propertyName="ScaleX"
+        android:valueType="floatType"
+        android:valueTo="1.0"
+        android:valueFrom="0.25"
+        android:duration="400"/>
+
+    <objectAnimator xmlns:android="http://schemas.android.com/apk/res/android"
+        android:interpolator="@android:anim/accelerate_decelerate_interpolator"
+        android:propertyName="ScaleY"
+        android:valueType="floatType"
+        android:valueTo="1.0"
+        android:valueFrom="0.25"
+        android:duration="400"/>
+
+    <objectAnimator xmlns:android="http://schemas.android.com/apk/res/android"
+        android:interpolator="@android:anim/accelerate_decelerate_interpolator"
+        android:propertyName="alpha"
+        android:valueType="floatType"
+        android:valueTo="1"
+        android:valueFrom="0"
+        android:duration="500"/>
 
 </set>
