--- a/app/src/main/res/drawable/data_gradient.xml
+++ b/app/src/main/res/drawable/data_gradient.xml
@@ -2,10 +2,15 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <gradient
-        android:type="linear"
-        android:angle="90.0"
-        android:startColor="#f4f4f4"
-        android:endColor="#ffffff"/>
+    <solid
+        android:color="#5a000000"/>
+
+    <corners
+        android:topLeftRadius="0dp"
+        android:topRightRadius="0dp"
+        android:bottomRightRadius="150dp"
+        android:bottomLeftRadius="150dp">
+    </corners>
+
 
 </shape>
