--- a/app/src/main/res/layout/help.xml
+++ b/app/src/main/res/layout/help.xml
@@ -11,17 +11,18 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:src="@drawable/menu_help"
-        android:layout_alignBottom="@+id/help_h1"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"/>
+        android:layout_above="@+id/scrollView"
+        android:layout_toRightOf="@+id/scrollView"
+        android:layout_toEndOf="@+id/scrollView" />
 
     <TextView
         style="@style/WrapContent"
         android:text="@string/menu_14"
         android:textSize="22dp"
         android:id="@+id/help_h1"
-        android:layout_toRightOf="@+id/mini_menu"
-        android:textColor="#77f2f2f2"/>
+        android:textColor="#77f2f2f2"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
 
     <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
@@ -32,7 +33,8 @@
        android:layout_marginStart="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
-       android:scrollbarAlwaysDrawVerticalTrack="true">
+       android:scrollbarAlwaysDrawVerticalTrack="true"
+        android:id="@+id/scrollView">
 
             <TextView
                 android:layout_width="match_parent"
