--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -112,6 +112,27 @@
 
         </RelativeLayout>
 
+        <RelativeLayout
+            style="@style/BtnsBlock"
+            android:id="@+id/buttons_block"
+            android:layout_width="fill_parent"
+            android:layout_height="50dp"
+            android:layout_alignParentBottom="true"
+            android:background="@drawable/buttons_block">
+
+            <Button
+                style="@style/BtnBack"
+                android:text="@string/btn_back"
+                android:id="@+id/btn_back"
+                android:layout_gravity="left|bottom"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:onClick="menuClick"
+                android:tag="menu"/>
+
+        </RelativeLayout>
+
         <FrameLayout
             xmlns:tools="http://schemas.android.com/tools"
             android:id="@+id/pager"
@@ -120,18 +141,6 @@
             tools:context=".MainActivity">
         </FrameLayout>
 
-        <Button
-            style="@style/BtnBack"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/btn_back"
-            android:id="@+id/btn_back"
-            android:layout_gravity="left|bottom"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:onClick="menuClick"
-            android:tag="menu"/>
 
     </RelativeLayout>
 
