--- a/app/src/main/res/layout/one_player.xml
+++ b/app/src/main/res/layout/one_player.xml
@@ -37,7 +37,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="20sp"
-                    android:text=""
+                    android:text="0"
                     android:textColor="#ff000000"
                     android:padding="5dp"
                     android:layout_alignParentTop="true"
