--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -47,16 +47,21 @@
 
     <style name="DataLine" parent="@android:style/TextAppearance.Medium">
         <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">44dp</item>
+        <item name="android:layout_height">50dp</item>
         <item name="android:shadowDx">5</item>
         <item name="android:shadowDy">5</item>
         <item name="android:shadowColor">#000000</item>
         <item name="android:shadowRadius">10</item>
+        <item name="android:background">@drawable/data_gradient</item>
+        <item name="android:paddingTop">5dp</item>
+        <item name="android:paddingLeft">50dp</item>
+        <item name="android:paddingRight">50dp</item>
     </style>
 
     <style name="DataBlock" parent="@android:style/TextAppearance.Medium">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_weight">25</item>
         <item name="android:layout_marginLeft">10dp</item>
         <item name="android:layout_marginRight">10dp</item>
     </style>
@@ -67,23 +72,37 @@
     </style>
 
     <style name="BtnBack" parent="@android:style/TextAppearance.Medium">
-        <item name="android:textSize">14dp</item>
+        <item name="android:textSize">13dp</item>
         <item name="android:background">@drawable/button_gradient</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">40dp</item>
         <item name="android:layout_margin">5dp</item>
+        <item name="android:textColor">#333333</item>
     </style>
 
     <style name="Btn" parent="@android:style/TextAppearance.Medium">
-        <item name="android:textSize">14dp</item>
+        <item name="android:textSize">13dp</item>
         <item name="android:background">@drawable/button_gradient</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">40dp</item>
         <item name="android:layout_margin">5dp</item>
         <item name="android:paddingLeft">10dp</item>
         <item name="android:paddingRight">10dp</item>
+        <item name="android:textColor">#333333</item>
+    </style>
+
+    <style name="BtnsBlock" parent="@android:style/TextAppearance.Medium">
+        <item name="android:shadowColor">#000000</item>
+        <item name="android:shadowDx">-3.0</item>
+        <item name="android:shadowDy">-3.0</item>
+        <item name="android:shadowRadius">10.0</item>
     </style>
 
     <style name="OneColor" parent="@android:style/TextAppearance.Medium">
         <item name="android:layout_width">50dp</item>
         <item name="android:layout_height">50dp</item>
     </style>
+
 
 
 </resources>
