--- a/app/src/main/res/layout/games.xml
+++ b/app/src/main/res/layout/games.xml
@@ -8,6 +8,7 @@
         android:layout_height="514dp"
         android:id="@+id/listOfEnemy"
         android:layout_gravity="center_horizontal"
+        android:layout_marginBottom="50dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
