Сворачивание групп на странцие команда

--- a/app/src/main/res/layout/games.xml
+++ b/app/src/main/res/layout/games.xml
@@ -3,13 +3,16 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="55dp"
+        android:layout_marginBottom="50dp">
+
     <ListView
         android:layout_width="match_parent"
-        android:layout_height="514dp"
-        android:id="@+id/listOfEnemy"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="50dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_height="wrap_content"
+        android:id="@+id/listOfEnemy"/>
+
+    </RelativeLayout>
 </RelativeLayout>
